Some minimalistic style changes - for better overview

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
         <div class="wrapper">
             <h1>Drag & Drop Application</h1>
-            <p>Exploring TypeScript by doing projects.</p>
+            <p>Exploring TypeScript with a drag & drop projects web application.</p>
+            <span class="line"></span>
         </div>
         <template id="project-input">
             <form>
