--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </template>
 
         <template id="single-project">
-            <li>
+            <li draggable="true">
+                <i class="fa-solid fa-grip-vertical"></i>
                 <h2></h2>
                 <h3></h3>
                 <p></p>
@@ -61,5 +62,6 @@
         <div id="app"></div>
 
         <script type="module" src="./src/app.ts"></script>
+        <script src="https://kit.fontawesome.com/b02f5c5221.js" crossorigin="anonymous"></script>
     </body>
 </html>
