--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <h2></h2>
                 <h3></h3>
                 <p></p>
+                <i class="fa-solid fa-trash"></i>
             </li>
         </template>
 
